<resources>
    <string name="app_name">TeachApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">TeachApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_register">Sign Up</string>
    <string name="register">Register</string>
    <string name="loading">Loading…</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="level">5</string>
    <string name="category">Categories</string>
    <string name="skills">• Java \n• POO \n• Álgebra \n• Agoritmos</string>
    <string name="nomProfile">Juan E. Peréz</string>
    <string name="solProfile">Request</string>
    <string name="numProfile">Tutorials: 12</string>
    <string name="uniProfile">University: Konrad Lorenz</string>
    <string name="ciuProfile">City: Bogotá D.C</string>
    <string name="emailProfile">juaneperez@konradlorenz.edu.co</string>
    <string name="btnCalificar">Qualify</string>
    <string name="historial">History</string>
    <string name="format_date">dd/mm/yyyy</string>
    <string name="format_hour">hh:mm</string>
    <string name="teach">TEACH</string>
    <string name="find_tutor">Find My Tutor</string>
    <string name="landscape">Landscape</string>
    <string name="Search">Search...</string>
    <string name="request">Request</string>
    <string name="areaR">Requested Area</string>
    <string name="area_offered">Offered Area</string>
    <string name="deadline">Deadline</string>
    <string name="send_request">Request made!</string>
    <string name="dark_theme">Dark Theme</string>

</resources>
