<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="314dp"
        android:layout_height="0dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/login_round" />

    <TextView
        android:id="@+id/textView7"
        style="@style/h1"
        android:layout_width="414dp"
        android:layout_height="101dp"
        android:layout_marginBottom="334dp"
        android:text="@string/teach"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/inputOut"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="423dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email"
            style="@style/input"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/inputOut"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="500dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            style="@style/input"
            android:layout_width="match_parent"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/email_sign_in_button"
        style="@style/btnBlue"
        android:text="@string/action_sign_in"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="573dp" />

    <Button
        android:id="@+id/register_user"
        style="@style/btnWhite"
        android:text="@string/user_register"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="628dp" />
</android.support.constraint.ConstraintLayout>