<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#E1DDDDE6"
        tools:ignore="UselessParent">



    <!-- TODO: Update blank fragment layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                app:srcCompat="@drawable/study" />

            <TextView
                android:id="@+id/scoreProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@android:drawable/btn_star_big_off"
                android:drawableRight="@android:drawable/btn_star_big_on"
                android:gravity="center_horizontal"
                android:drawableRight="@android:drawable/btn_star_big_on"
                android:text="@string/level"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/holo_orange_light"
                android:drawableEnd="@android:drawable/btn_star_big_on"
                android:padding="15sp"/>

            <TextView
                android:id="@+id/areasProfile"
                android:layout_width="113dp"
                android:layout_height="148dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginBottom="64dp"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                app:fontFamily="@font/dosis_medium" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:background="#fff"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nomProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/nomProfile"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="5dp"
                android:text="@string/emailProfile"/>

            <TextView
                android:id="@+id/cityProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="5dp"
                android:text="@string/ciuProfile"/>

            <TextView
                android:id="@+id/universityProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="5dp"
                android:text="@string/uniProfile"/>

            <TextView
                android:id="@+id/numberTutProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="5dp"
                android:textStyle="italic"
                app:fontFamily="@font/dosis_medium" />


            <Button
                android:id="@+id/btnRequest"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/solProfile"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:textColor="#fff"
                android:drawableLeft="@android:drawable/presence_online"
                android:drawableStart="@android:drawable/presence_online">

            </Button>

        </LinearLayout>

    </LinearLayout>

    </ScrollView>
</FrameLayout>