<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="364dp"
        android:layout_height="44dp"
        android:background="@color/almost_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        tools:layout_editor_absoluteY="378dp">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/almost_white"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="433dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@color/almost_white"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/email_sign_in_button"
        style="@android:style/Widget.Holo.Button.Inset"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/action_sign_in"
        android:textColor="@color/blue_800"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="519dp" />

    <Button
        android:id="@+id/register_user"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/user_register"
        android:textColor="@color/blue_700"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="215dp"
        tools:layout_editor_absoluteY="519dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="327dp"
        android:layout_height="162dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <ImageButton
        android:id="@+id/imageButton"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="128dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="16dp"
        tools:srcCompat="@android:drawable/dialog_holo_light_frame" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="116dp"
        android:layout_height="100dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="151dp"
        tools:srcCompat="@android:drawable/dialog_holo_light_frame" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="119dp"
        android:layout_height="98dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="271dp"
        tools:srcCompat="@android:drawable/dialog_holo_light_frame" />


</android.support.constraint.ConstraintLayout>